# vgi

./: ProjectHome.md  build.xml  defaultStyle.xml  hierarchical_sugiyama_test_case.xml  readme.txt
jgraphx/: build.xml
lib/: nblibraries.properties
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
nbproject/private/: private.properties
src/: Automata.java  AutomataInterface.java  Automata_properties.form  Automata_properties.java  CreateAutomataDialog.form  CreateAutomataDialog.java  DrawJgraphXPanel.form  DrawJgraphXPanel.java  DrawPanel.java  Drawing.java  EditorPopupMenu.java  ExpressionEditor.form  ExpressionEditor.java  FsmXml.java  FsmXmlInterface.java  Geometry.java  JgraphXInternalFrame.form  JgraphXInternalFrame.java  MainWindow.java  Monoid.java  Property_show.java  Semiring.java  State.java  StateInterface.java  TAFKit.java  TAFKitInterface.java  Transition.java  TransitionInterface.java  Type.java  VGI.form  VGI.java  VgiDraw.java  ViewInterface.java  WeightedRegularExpression.java  edge_properties.form  edge_properties.java  state_properties.form  state_properties.java
src/drawpackage/: EdgePalette.java  EditorPalette.java  ShadowBorder.java
src/vgi/: Automata.java  AutomataHistory.java  AutomataInterface.java  CircleLayout.java  (+63 more)
testcase/: 20140427_test.xml  circular_group.xml  linear_edge_overlap.xml  linear_selfloop.xml  piecewise_linear.xml  test.xml  test2.xml  test_case2.xml  test_case_bigger.xml  test_case_linear.xml  test_case_triple_random.xml
vgi/: 123.xml  20140718_test.xml  defaultStyle.xml  two_level_hierarchical_test_case.xml
vgi/src/: Makefile.am  RJGraph.java.bak  VGI.java
vgi/src/controller/: Controller.java  ControllerInterface.java  LabelParser.java  ModeConstants.java
vgi/src/debug/: Debug.java
vgi/src/event/: UIEvent.java  UIEventConstants2.java  UserEventConstants.java
vgi/src/layout_algorithm/: CenterGraph.java  CircleLayout.java  CircleLayoutWithNoAlg.java  GridLayout.java  HierarchicalLayout2.java  ModifyStateLoop.java  SpringLayout.java
vgi/src/model/: Automata2.java  DataModel.java  DataModelInterface.java  DataModelObserver.java  Drawing2.java  FSMXSD.xsd  Geometry2.java  TypeConstants.java
vgi/src/resource/: 2.xml  aplusb.xml  good.xml  readme.txt  xmlExample.xml
vgi/src/resource/icons/: License.txt
vgi/src/storage/: AutomatonPanel.form  AutomatonPanel.java  LabelFactory.java  MenuBar.java  SetAutomaton.java  Storage.java  TabComponent.java  TabbedPaneForGraph.java  ToolBar.form  ToolBar.java  XMLCreator.java  XMLReader.java  XmlFileFilter.java
vgi/src/vgi/automata/: AutomataInterface.java  Group.java  IniFinGeometricData.java  Initial.java  InitialFinalWeight.java  State.java  StateGeometricData.java  TransitionGeometricData.java  TransitionInterface.java  WeightedRegularExpression.java
vgi/src/vgi/display/: DisplayUtil.java  JgraphAutomata.java  JgraphXInternalFrame.form  JgraphXInternalFrame.java  PreferenceStyleDialog.form  PreferenceStyleXml.java  ProjectionDialog.java  StatePropertiesPanel.form  StatePropertiesPanel.java
vgi/src/vgi/fsmxml/: FsmXml.java
vgi/src/vgi/geometrictools/: RotationAngle.java  Vector2D.java
vgi/src/vgi/layout/circular/: CircularLayoutAutomata.java
vgi/src/vgi/layout/edgerouting/: Edge.java  EdgeCostSettingsDialog.java  EdgePropertiesPanel.form  MeasureExecutionTimes.java  Node.java  SingleVertexEdgesLayout.java  WeightedVisibilityGraph.java
vgi/src/vgi/layout/feature/: ClusterPreProcess.java  FeatureLayout.java  PreProcess.java
vgi/src/vgi/layout/helperclass/: GroupReplacedAutomata.java  SccDfs.java
vgi/src/vgi/layout/linear/: LinearLayoutAutomata.java
vgi/src/view/cellview/: AcceptStateView.java  CellViewConstants.java  GPCellViewFactory.java.bak  InitialFinalStateView.java  InitialStateView.java  MyCellViewFactory.java  MyPortView.java  StateView.java  _StateView.java.bak
vgi/src/view/demo/: DeleteDemo.java  Demo.java  PortDemo.java
vgi/src/view/jgraph/: JGraphController.java  JGraphLayoutMorphingManager.java
vgi/src/view/main/: CanvasView.java
vgi/src/view/router/: JGraphParallelFlexibleRouter.java  LoopRouter.java  Router.java
vgi/src/view_algorithm/: FisheyeAlgorithm.java
vgi/src/vjni/: Vjni.java
vjni/: vjni.cpp  vjni.h
(+1313 files in other folders)
